2010-08-28  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (mouse_face_from_buffer_pos): Fix code using bug#1220 as
	test case.  Implement  highlight for R2L rows.  Fix the case of
	continued L2R lines.
	(show_mouse_face): Support drawing highlighted R2L lines.

2010-08-21  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (mouse_face_from_buffer_pos): Support mouse highlight in
	bidi-reordered L2R lines.  Continued lines are not yet supported.

	* dispnew.c (buffer_posn_from_coords): Fix off-by-one error in
	mirroring pixel positions.

2010-08-20  Dan Nicolaescu  <dann@ics.uci.edu>

	* alloc.c (malloc_sbrk_used, malloc_sbrk_unused): Remove,
	write only.
	(init_alloc_once): Remove writes to malloc_sbrk_unused, and
	malloc_sbrk_used, nothing uses them.

	* puresize.h: Remove code assuming PNTR_COMPARISON_TYPE is not
	defined, unconditionally defined in lisp.h.

	* term.c: Do not include <termios.h>, systty.h does it.

	* s/unixware.h (HAVE_TCATTR):
	* s/aix4-2.h (HAVE_TCATTR): Remove definitions, not needed.
	systty.h defines it when HAVE_TERMIOS is defined.

2010-08-20  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (buffer_posn_from_coords): Fix last change for text
	terminals: add one-character offset for R2L lines.

	* emacs.c <emacs_version>: Add a comment regarding
	msdos/mainmake.v2's dependency on the syntax of this declaration.

2010-08-20  Eli Zaretskii  <eliz@gnu.org>

	* dispnew.c (buffer_posn_from_coords): Fix calculation of buffer
	position for R2L lines by mirroring the pixel position wrt the
	text are box.  Improve commentary.

2010-08-20  Andreas Schwab  <schwab@linux-m68k.org>

	* image.c (imagemagick_clear_image): Remove debugging output.

2010-08-19  Stefan Monnier  <monnier@iro.umontreal.ca>

	* cmds.c (Vself_insert_face, Vself_insert_face_command): Remove.
	(Qpost_self_insert_hook, Vpost_self_insert_hook): New vars.
	(internal_self_insert): Run Qpost_self_insert_hook rather than handle
	self-insert-face.
	(syms_of_cmds): Initialize the new vars.
